# project-la-chambita

./: CMakeLists.txt  Minijuego2.cpp  README.md  estadisticas.txt  funciones.cpp  juegoUNO.cpp  juegoUNO.h  main.cpp  minijuego_Palabra.cpp  minijuego_Palabra.h  minijuego_matematico.cpp  minijuego_matematico.h  minijuegos.h  prueba1.cpp  puntaje_minijuego.txt  puntaje_minijuego_mate.txt  registro_jugadores.txt  test_minijuego.cpp  test_minijuego_matematico.cpp
RaylibProyecto - Copy/: juegoUNO.cpp  registro_jugadores.txt
include/: juegoUNO.h  minijuego_Intruso.h  minijuego_Palabra.h  minijuego_Velocidad.h  minijuego_matematico.h
src/: funciones.cpp  juegoUNO.cpp  minijuego_Intruso.cpp  minijuego_Palabra.cpp  minijuego_Velocidad.cpp  minijuego_matematico.cpp
